--- a/教学指南/项目规则.md
+++ b/教学指南/项目规则.md
@@ -58,14 +58,22 @@ src/components/
 教学指南/
 ├── README.md           # 本文件
 ├── 项目规则.md         # 规则说明（新对话时发给我）
-└── v0.1/
-    ├── 类型定义/
-    │   └── 类型定义案例.md
-    ├── UI组件/
-    │   └── MessageBubble组件案例.md
-    ├── 状态管理/
-    ├── API集成/
-    └── 样式优化/
+├── v0.1/              # v0.1 版本
+│   ├── 类型定义/
+│   │   └── 类型定义案例.md
+│   ├── UI组件/
+│   │   ├── MessageBubble组件案例.md
+│   │   ├── ChatList组件案例.md
+│   │   └── ChatInput组件案例.md
+│   ├── 状态管理/
+│   │   └── 状态管理案例.md
+│   ├── API集成/
+│   │   └── API集成案例.md
+│   └── 样式优化/
+│       └── 样式优化案例.md
+└── v0.2/              # v0.2 版本
+    └── 模式系统/
+        └── 模式系统规划.md
 ```
 
 ### 新对话开始时
@@ -86,9 +94,18 @@ src/components/
 - ✅ Ollama API 集成（qwen2.5-coder:7b）
 - ✅ 错误处理和加载状态
 - ✅ README 文档
+- ✅ GitHub 仓库创建和代码提交
 
-### v0.2 待规划 ⏳
-- 多轮对话历史
+### v0.2 开发中 🔄
+- 🔄 模式系统规划
+- ⏳ 类型定义（Mode、ModeSelector 等）
+- ⏳ 模式配置（普通聊天、前端导师、代码审查）
+- ⏳ 上下文管理（滑动窗口、System Prompt 注入）
+- ⏳ API 服务改造（支持上下文）
+- ⏳ ModeSelector 组件
+- ⏳ 状态管理更新
+
+### v0.3 待规划 ⏳
 - Markdown 渲染
 - 消息导出
 - 深色模式
