规划与规则更新

--- a/教学指南/项目规则.md
+++ b/教学指南/项目规则.md
@@ -72,9 +72,65 @@ src/components/
 │   └── 样式优化/
 │       └── 样式优化案例.md
 └── v0.2/              # v0.2 版本
-    └── 模式系统/
-        └── 模式系统规划.md
+    ├── v0.2规划.md
+    ├── 类型定义/
+    │   └── 类型定义案例.md
+    ├── 模式配置/
+    │   └── 模式配置案例.md
+    ├── 上下文管理/
+    │   └── 上下文管理案例.md
+    ├── API集成/
+    │   └── API集成案例.md
+    ├── UI组件/
+    │   └── ModeSelector组件案例.md
+    └── 状态管理/
+        └── 状态管理案例.md
 ```
+
+### 版本规划文件格式规范
+
+每个版本都应该有一个简洁的规划文件（如 `v0.2规划.md`），包含以下内容：
+
+1. **功能需求** - 列出该版本的核心功能点
+2. **实现步骤** - 按顺序列出实现步骤（如：类型定义 → 模式配置 → 上下文管理 → API集成 → UI组件 → 状态管理）
+3. **技术要点** - 关键技术概念和实现要点
+4. **测试验证** - 测试场景和验证点
+5. **学习收获** - 通过该版本能学到什么
+
+### 教学指南文件夹划分规则
+
+每个版本的实现步骤都应该有独立的文件夹和案例文件：
+
+**命名规则**：
+- 文件夹名称：使用中文描述（如 `类型定义`、`模式配置`、`上下文管理`）
+- 案例文件：`步骤名称案例.md`（如 `类型定义案例.md`）
+
+**文件夹结构**：
+```
+教学指南/v0.2/
+├── v0.2规划.md                    # 简洁的规划文件
+├── 类型定义/                      # 步骤 1
+│   └── 类型定义案例.md
+├── 模式配置/                      # 步骤 2
+│   └── 模式配置案例.md
+├── 上下文管理/                    # 步骤 3
+│   └── 上下文管理案例.md
+├── API集成/                       # 步骤 4
+│   └── API集成案例.md
+├── UI组件/                        # 步骤 5
+│   └── ModeSelector组件案例.md
+└── 状态管理/                      # 步骤 6
+    └── 状态管理案例.md
+```
+
+**案例文件内容规范**：
+每个案例文件应包含：
+1. **基础实现** - 核心代码示例
+2. **使用示例** - 如何在项目中使用
+3. **原理解释** - 技术原理说明
+4. **进阶功能**（可选）- 更高级的实现方式
+5. **测试用例**（可选）- 如何测试
+6. **你的任务** - 明确告诉学生需要做什么
 
 ### 新对话开始时
 发送以下内容给我：
@@ -97,13 +153,13 @@ src/components/
 - ✅ GitHub 仓库创建和代码提交
 
 ### v0.2 开发中 🔄
-- 🔄 模式系统规划
-- ⏳ 类型定义（Mode、ModeSelector 等）
-- ⏳ 模式配置（普通聊天、前端导师、代码审查）
-- ⏳ 上下文管理（滑动窗口、System Prompt 注入）
-- ⏳ API 服务改造（支持上下文）
+- ✅ 规划文件和案例文档（v0.2规划.md + 6个步骤案例）
+- ⏳ 类型定义（Mode、StreamChunk、AppState）
+- ⏳ 模式配置（MODES 常量）
+- ⏳ 上下文管理（getContext 函数）
+- ⏳ API 服务改造（流式输出 sendMessageStream）
 - ⏳ ModeSelector 组件
-- ⏳ 状态管理更新
+- ⏳ 状态管理更新（集成模式和流式输出）
 
 ### v0.3 待规划 ⏳
 - Markdown 渲染
@@ -117,3 +173,34 @@ src/components/
 - **先看案例再动手**，遇到问题再问我
 - **每完成一个步骤告诉我**，我帮你检查
 - **保持耐心**，学习是一个过程
+
+## 8. 版本规划流程
+
+当需要规划新版本时，按照以下流程：
+
+1. **创建规划文件**（如 `v0.2规划.md`）
+   - 功能需求
+   - 实现步骤
+   - 技术要点
+   - 测试验证
+   - 学习收获
+
+2. **为每个步骤创建文件夹和案例文件**
+   - 文件夹命名：中文描述（如 `类型定义`）
+   - 案例文件：`步骤名称案例.md`
+   - 包含：基础实现、使用示例、原理解释、你的任务
+
+3. **更新项目规则.md**
+   - 更新目录结构
+   - 更新当前项目状态
+
+4. **更新 README.md**
+   - 更新功能特性
+   - 更新项目结构
+   - 更新学习资源
+   - 更新版本历史
+
+5. **按步骤实现**
+   - 学生按顺序阅读案例
+   - 根据案例自己实现
+   - 完成后告诉老师检查
