完成 v0.2 模式系统实现
- 添加 Mode 相关类型定义（Mode、AppState）
- 创建 MODES 配置文件（普通聊天、前端导师、代码审查）
- 实现 ModeSelector 组件（响应式设计，支持移动端）
- 集成模式切换功能到 App
- 更新 README.md 和项目规则.md 的进度
- 重新组织 v0.2 教学指南（按功能模块划分）
- 重构组件结构（使用文件夹组织组件文件）

--- a/教学指南/v0.2/v0.2规划.md
+++ b/教学指南/v0.2/v0.2规划.md
@@ -2,7 +2,7 @@
 
 ## 功能需求
 
-### 1. 模式管理
+### 1. 模式系统
 - 定义多个模式（普通聊天、前端导师、代码审查等）
 - 模式切换功能
 - 模式配置（系统提示、上下文长度等）
@@ -12,45 +12,54 @@
 - System Prompt 注入
 - 上下文长度优化
 
-### 3. 用户界面
-- 模式选择器
-- 当前模式显示
-- 模式切换动画
-
-### 4. 流式输出
+### 3. 流式输出
 - 实时显示 AI 回复内容
 - 打字机效果
 - 流式数据解析和渲染
 
-## 实现步骤
+## 实现步骤（按功能模块）
 
-### 步骤 1：类型定义
+### 功能模块 1：模式系统
+
+#### 步骤 1：类型定义
 - 定义 Mode 接口
-- 定义 StreamChunk 接口
-- 扩展 AppState 类型
+- 扩展 AppState 类型（添加 currentMode 和 modes）
 
-### 步骤 2：模式配置
+#### 步骤 2：模式配置
 - 定义 MODES 常量
 - 配置预定义模式（普通聊天、前端导师、代码审查）
 
-### 步骤 3：上下文管理
-- 创建 getContext 函数
-- 实现 System Prompt 注入
-- 实现滑动窗口逻辑
+#### 步骤 3：ModeSelector 组件
+- 创建模式选择器 UI
+- 实现模式切换交互
 
-### 步骤 4：API 服务改造
-- 创建 StreamChunk 类型
+#### 步骤 4：集成模式切换
+- 在 App 中集成 ModeSelector
+- 实现模式切换状态管理
+
+### 功能模块 2：上下文管理
+
+#### 步骤 5：getContext 函数
+- 实现上下文管理逻辑
+- 实现 System Prompt 注入
+- 实现滑动窗口
+
+#### 步骤 6：集成上下文管理
+- 在发送消息时使用上下文
+- 验证上下文传递正确
+
+### 功能模块 3：流式输出
+
+#### 步骤 7：流式类型定义
+- 定义 StreamChunk 接口
+
+#### 步骤 8：API 流式改造
 - 实现 sendMessageStream 函数
 - 处理流式响应
 
-### 步骤 5：UI 组件
-- 创建 ModeSelector 组件
-- 实现模式切换 UI
-
-### 步骤 6：状态管理更新
-- 更新 AppState 类型
-- 实现流式输出的状态更新逻辑
-- 集成模式切换和流式输出
+#### 步骤 9：集成流式输出
+- 在状态管理中集成流式更新
+- 实现实时显示效果
 
 ## 技术要点
 
@@ -72,24 +81,27 @@
 ## 测试验证
 
 ### 测试场景
-1. **普通聊天模式**：友好的回答
-2. **前端导师模式**：专业、有代码示例、引导深入
-3. **代码审查模式**：严格审查、指出问题、给出建议
-4. **流式输出**：内容逐字显示，有打字机效果
+1. **模式切换**：切换不同模式后，回答风格明显不同
+2. **上下文传递**：验证上下文正确传递给 API
+3. **系统提示**：验证 System Prompt 不泄露给用户
+4. **上下文长度**：验证上下文长度控制有效
+5. **流式输出**：内容逐字显示，有打字机效果
+6. **错误处理**：流式输出过程中可以正确处理中断和错误
 
 ### 验证点
-- 模式切换后，回答风格明显不同
-- 上下文正确传递
-- System Prompt 不泄露给用户
-- 上下文长度控制有效
-- 流式输出实时显示
-- 流式输出过程中可以正确处理中断和错误
+- ✅ 模式切换功能正常
+- ✅ 上下文正确传递
+- ✅ System Prompt 不泄露给用户
+- ✅ 上下文长度控制有效
+- ✅ 流式输出实时显示
+- ✅ 流式输出错误处理正确
 
 ## 学习收获
 
-1. 系统提示工程：如何设计有效的 system prompt
-2. 上下文管理：如何优化对话历史
-3. 前端主导 AI：如何通过前端控制模型行为
-4. 状态管理进阶：复杂状态的拆分和管理
-5. 流式数据处理：如何处理和渲染流式 API 响应
-6. 异步编程：使用 ReadableStream API 和回调函数处理异步流
+1. 模块化开发：按功能模块组织代码
+2. 系统提示工程：如何设计有效的 system prompt
+3. 上下文管理：如何优化对话历史
+4. 前端主导 AI：如何通过前端控制模型行为
+5. 状态管理进阶：复杂状态的拆分和管理
+6. 流式数据处理：如何处理和渲染流式 API 响应
+7. 异步编程：使用 ReadableStream API 和回调函数处理异步流
