--- a/教学指南/v0.2/模式系统/类型定义案例.md
+++ b/教学指南/v0.2/模式系统/类型定义案例.md
@@ -1,4 +1,4 @@
-# TypeScript 类型定义案例 - 模式系统
+# 类型定义案例 - Mode 相关
 
 ## 1. Mode 接口定义
 
@@ -14,20 +14,7 @@ interface Mode {
 }
 ```
 
-## 2. StreamChunk 接口定义
-
-```typescript
-// 流式响应的数据块类型
-interface StreamChunk {
-  done: boolean;           // 是否完成
-  message?: {
-    role: string;          // 消息角色
-    content: string;       // 消息内容片段
-  };
-}
-```
-
-## 3. AppState 类型扩展
+## 2. AppState 类型扩展
 
 ```typescript
 // 假设已有基础类型
@@ -47,7 +34,7 @@ interface AppState {
 }
 ```
 
-## 4. 实际使用示例
+## 3. 实际使用示例
 
 ```typescript
 // 在组件中使用
@@ -82,7 +69,7 @@ function App() {
 }
 ```
 
-## 5. 类型工具示例
+## 4. 类型工具示例
 
 ```typescript
 // 提取模式的 ID 类型
@@ -100,7 +87,6 @@ type CreateMode = Required<Pick<Mode, 'id' | 'name' | 'systemPrompt' | 'contextL
 在 `src/types/index.ts` 中添加以下类型：
 
 1. **Mode 接口**：包含 id、name、description、systemPrompt、contextLength、icon
-2. **StreamChunk 接口**：包含 done、message（role、content）
-3. **扩展 AppState**：添加 currentMode 和 modes 字段
+2. **扩展 AppState**：添加 currentMode 和 modes 字段
 
-试试看，写完后告诉我："我写好了，你检查一下 @src/types/index.ts"
+完成后告诉我："我写好了，你检查一下 @src/types/index.ts"
