--- a/教学指南/项目规则.md
+++ b/教学指南/项目规则.md
@@ -71,20 +71,20 @@ src/components/
 │   │   └── API集成案例.md
 │   └── 样式优化/
 │       └── 样式优化案例.md
-└── v0.2/              # v0.2 版本
+└── v0.2/              # v0.2 版本（按功能模块组织）
     ├── v0.2规划.md
-    ├── 类型定义/
-    │   └── 类型定义案例.md
-    ├── 模式配置/
-    │   └── 模式配置案例.md
+    ├── 模式系统/
+    │   ├── 类型定义案例.md
+    │   ├── 模式配置案例.md
+    │   ├── ModeSelector组件案例.md
+    │   └── 集成模式切换案例.md
     ├── 上下文管理/
-    │   └── 上下文管理案例.md
-    ├── API集成/
-    │   └── API集成案例.md
-    ├── UI组件/
-    │   └── ModeSelector组件案例.md
-    └── 状态管理/
-        └── 状态管理案例.md
+    │   ├── getContext函数案例.md
+    │   └── 集成上下文管理案例.md
+    └── 流式输出/
+        ├── 流式类型定义案例.md
+        ├── API流式改造案例.md
+        └── 集成流式输出案例.md
 ```
 
 ### 版本规划文件格式规范
@@ -109,19 +109,24 @@ src/components/
 ```
 教学指南/v0.2/
 ├── v0.2规划.md                    # 简洁的规划文件
-├── 类型定义/                      # 步骤 1
-│   └── 类型定义案例.md
-├── 模式配置/                      # 步骤 2
-│   └── 模式配置案例.md
-├── 上下文管理/                    # 步骤 3
-│   └── 上下文管理案例.md
-├── API集成/                       # 步骤 4
-│   └── API集成案例.md
-├── UI组件/                        # 步骤 5
-│   └── ModeSelector组件案例.md
-└── 状态管理/                      # 步骤 6
-    └── 状态管理案例.md
+├── 模式系统/                      # 功能模块 1
+│   ├── 类型定义案例.md
+│   ├── 模式配置案例.md
+│   ├── ModeSelector组件案例.md
+│   └── 集成模式切换案例.md
+├── 上下文管理/                    # 功能模块 2
+│   ├── getContext函数案例.md
+│   └── 集成上下文管理案例.md
+└── 流式输出/                      # 功能模块 3
+    ├── 流式类型定义案例.md
+    ├── API流式改造案例.md
+    └── 集成流式输出案例.md
 ```
+
+**组织原则**：
+- 按功能模块组织（如：模式系统、上下文管理、流式输出）
+- 每个功能模块包含完整的实现步骤（类型定义 → 配置 → 组件 → 集成）
+- 每个步骤都是独立的，可以单独学习和实现
 
 **案例文件内容规范**：
 每个案例文件应包含：
@@ -153,13 +158,19 @@ src/components/
 - ✅ GitHub 仓库创建和代码提交
 
 ### v0.2 开发中 🔄
-- ✅ 规划文件和案例文档（v0.2规划.md + 6个步骤案例）
-- ⏳ 类型定义（Mode、StreamChunk、AppState）
-- ⏳ 模式配置（MODES 常量）
-- ⏳ 上下文管理（getContext 函数）
-- ⏳ API 服务改造（流式输出 sendMessageStream）
-- ⏳ ModeSelector 组件
-- ⏳ 状态管理更新（集成模式和流式输出）
+- ✅ 规划文件和案例文档（v0.2规划.md + 按功能模块组织的案例）
+- ✅ 功能模块 1：模式系统
+  - ✅ 类型定义（Mode、AppState）
+  - ✅ 模式配置（MODES 常量）
+  - ✅ ModeSelector 组件（响应式设计）
+  - ✅ 集成模式切换
+- ⏳ 功能模块 2：上下文管理
+  - ⏳ getContext 函数
+  - ⏳ 集成上下文管理
+- ⏳ 功能模块 3：流式输出
+  - ⏳ 流式类型定义（StreamChunk）
+  - ⏳ API 流式改造（sendMessageStream）
+  - ⏳ 集成流式输出
 
 ### v0.3 待规划 ⏳
 - Markdown 渲染
