完成 v0.2 上下文管理功能
- 实现 getContext 函数（滑动窗口机制）
- 更新 sendMessage 函数支持上下文参数
- 集成上下文管理到 App 组件
- 添加滑动窗口机制讲解文档
- 更新 README.md 和项目规则.md 的进度
- 优化 AppState 类型定义（使用 Omit）

--- a/教学指南/v0.2/上下文管理/集成上下文管理案例.md
+++ b/教学指南/v0.2/上下文管理/集成上下文管理案例.md
@@ -169,25 +169,24 @@ AI: 学习 React 我建议按以下步骤进行：
 ### 测试场景 3：代码审查模式
 ```
 用户: 帮我看看这段代码
-```javascript
+javascript
 function sum(a, b) {
   return a + b;
 }
-```
 AI: 这段代码有以下几个问题：
 
 1. **参数类型检查缺失**：没有验证 a 和 b 是否为数字
 2. **错误处理不足**：没有处理可能的异常情况
 
 改进建议：
-```javascript
+javascript
 function sum(a: number, b: number): number {
   if (typeof a !== 'number' || typeof b !== 'number') {
     throw new TypeError('参数必须是数字');
   }
   return a + b;
 }
-```
+
 
 或者使用 TypeScript 的类型系统自动处理。
 ```
@@ -243,6 +242,123 @@ function App() {
   };
 }
 ```
+
+## 7. 修改 src/services/chat.ts
+
+### 当前问题
+
+现有的 `sendMessage` 函数有以下问题：
+
+```typescript
+// 当前实现
+export async function sendMessage(content: string): Promise<string> {
+  const request: OllamaChatRequest = {
+    messages: [
+      {
+        role: "user",
+        content,  // ← 只发送单条消息
+      },
+    ],
+    model: "qwen2.5-coder:7b",
+    stream: false,
+  };
+  // ...
+}
+```
+
+**问题**：
+1. ❌ 只接受 content 参数，没有接受上下文
+2. ❌ 只发送单条消息，没有包含历史对话
+3. ❌ 没有使用 system prompt，无法控制 AI 角色
+4. ❌ 没有流式输出，等待完整响应才显示
+
+### 需要的改动
+
+#### 改动 1：修改 sendMessage 函数签名
+
+```typescript
+// 修改前
+export async function sendMessage(content: string): Promise<string>
+
+// 修改后
+export async function sendMessage(
+  content: string,
+  context: Message[]
+): Promise<string>
+```
+
+#### 改动 2：使用 context 参数
+
+```typescript
+export async function sendMessage(
+  content: string,
+  context: Message[]
+): Promise<string> {
+  const request = {
+    model: "qwen2.5-coder:7b",
+    messages: context.map(msg => ({  // ← 使用 context 而不是只发送单条消息
+      role: msg.role,
+      content: msg.content,
+    })),
+    stream: false,
+  };
+
+  // ... 其余代码不变
+}
+```
+
+#### 改动 3：完整的修改后代码
+
+```typescript
+import type { OllamaChatRequest, OllamaChatResponse, Message } from "../types";
+
+// API 配置
+const API_BASE_URL = "http://localhost:11434/api";
+
+/**
+ * 发送消息到 Ollama API
+ * @param content - 用户消息内容（已废弃，保留用于向后兼容）
+ * @param context - 上下文消息数组（包含 system prompt 和历史消息）
+ * @returns AI 回复内容
+ */
+export async function sendMessage(
+  content: string,
+  context: Message[]
+): Promise<string> {
+  const request: OllamaChatRequest = {
+    model: "qwen2.5-coder:7b",
+    messages: context.map(msg => ({
+      role: msg.role,
+      content: msg.content,
+    })),
+    stream: false,
+  };
+
+  try {
+    const response = await fetch(`${API_BASE_URL}/chat`, {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+      },
+      body: JSON.stringify(request),
+    });
+
+    if (!response.ok) {
+      throw new Error(`HTTP error! status: ${response.status}`);
+    }
+
+    const data: OllamaChatResponse = await response.json();
+    return data.message.content;
+  } catch (error) {
+    console.error("API 请求失败：", error);
+    throw error;
+  }
+}
+```
+
+### 注意事项
+
+⚠️ **content 参数已废弃**：虽然保留了 `content` 参数以保持向后兼容，但实际使用的是 `context` 参数。在未来的流式输出版本中，这个参数可能会被完全移除。
 
 ## 你的任务
 
