--- a/教学指南/项目规则.md
+++ b/教学指南/项目规则.md
@@ -85,6 +85,12 @@ src/components/
         ├── 流式类型定义案例.md
         ├── API流式改造案例.md
         └── 集成流式输出案例.md
+└── v0.3/              # v0.3 版本
+    ├── v0.3规划.md
+    └── Markdown渲染/
+        ├── 类型定义案例.md
+        ├── MarkdownRenderer组件案例.md
+        └── 集成Markdown渲染.md
 ```
 
 ### 版本规划文件格式规范
@@ -174,12 +180,13 @@ src/components/
   - ✅ API 流式改造（sendMessageStream）
   - ✅ 集成流式输出
 
-### v0.3 待规划 ⏳
-- Markdown 渲染
-- 消息导出
-- 深色模式
-- 图片上传
-- 语音输入
+### v0.3 待办事项 ⏳
+- [ ] Markdown 渲染
+- [ ] 消息导出
+- [ ] 深色模式
+- [ ] 图片上传
+- [ ] 语音输入
+- [ ] 智能体系统重构（多聊天记录支持，Agent 替代 Mode）
 
 ## 7. 重要提醒
 - **不要帮我写代码**，除非我明确要求
