重构：迁移到 Monorepo 架构（pnpm workspace）
- 迁移到 pnpm workspace + Turborepo 架构
- 创建 apps/client、apps/admin、apps/server 目录结构
- 创建 packages/shared、packages/ui 共享包
- 配置 pnpm-workspace.yaml 和 turbo.json
- 将用户端代码迁移到 apps/client，更新 package.json
- 更新 README.md 和 README_EN.md 文档
- 更新项目规则文档
- 添加 README 语言切换链接
- 修复 TypeScript 配置以支持 ESNext

--- a/教学指南/项目规则.md
+++ b/教学指南/项目规则.md
@@ -5,22 +5,49 @@
 - **你是学生**：根据案例自己实现，我负责检查和指导
 
 ## 2. 技术栈
-- **框架**：React 18
-- **语言**：TypeScript
-- **构建工具**：Vite
-- **样式方案**：CSS Modules
+- **架构**: Monorepo (pnpm workspace + Turborepo)
+- **框架**: React 19
+- **语言**: TypeScript
+- **构建工具**: Vite 7
+- **样式方案**: CSS Modules
 
 ## 3. 文件组织规范
 
+### Monorepo 结构
+```
+ai-chat-platform/
+├── apps/
+│   ├── client/              # 用户端
+│   │   ├── src/
+│   │   │   ├── components/  # React 组件
+│   │   │   ├── config/      # 配置文件
+│   │   │   ├── services/    # API 服务
+│   │   │   ├── types/       # TypeScript 类型
+│   │   │   └── utils/       # 工具函数
+│   │   ├── package.json
+│   │   └── vite.config.ts
+│   ├── admin/               # 管理端（待开发）
+│   └── server/              # 服务端（待开发）
+├── packages/
+│   ├── shared/              # 共享类型和工具
+│   │   └── src/
+│   └── ui/                  # 共享 UI 组件
+│       └── src/
+├── package.json             # 根配置
+├── pnpm-workspace.yaml      # pnpm workspace 配置
+└── turbo.json               # Turborepo 配置
+```
+
 ### 类型定义
-- 位置：`src/types/index.ts`
+- 用户端位置：`apps/client/src/types/index.ts`
+- 共享类型位置：`packages/shared/src/types/index.ts`
 - 对象类型使用 `interface`
 - 联合类型使用 `type`
 - 所有类型需要 `export`
 
 ### 组件结构
 ```
-src/components/
+apps/client/src/components/
 ├── MessageBubble/
 │   ├── MessageBubble.tsx
 │   └── MessageBubble.module.css
@@ -56,7 +83,6 @@ src/components/
 ### 目录结构
 ```
 教学指南/
-├── README.md           # 本文件
 ├── 项目规则.md         # 规则说明（新对话时发给我）
 ├── v0.1/              # v0.1 版本
 │   ├── 类型定义/
@@ -151,6 +177,14 @@ src/components/
 
 ## 6. 当前项目状态
 
+### Monorepo 迁移已完成 ✅
+- ✅ 项目迁移到 pnpm workspace + Turborepo 架构
+- ✅ 创建 apps/client、apps/admin、apps/server 目录
+- ✅ 创建 packages/shared、packages/ui 共享包
+- ✅ 配置 pnpm-workspace.yaml 和 turbo.json
+- ✅ 迁移用户端代码到 apps/client
+- ✅ 更新 README 文档
+
 ### v0.1 已完成 ✅
 - ✅ 项目初始化（Vite + React + TypeScript）
 - ✅ 类型定义（Message、ChatState、ChatInputProps、Ollama API 类型）
@@ -187,12 +221,27 @@ src/components/
 - ✅ 集成到 MessageBubble
 
 ### 待办事项 ⏳
+
+#### 用户端
 - [ ] 消息导出
 - [ ] 深色模式
 - [ ] 图片上传
 - [ ] 语音输入
 - [ ] 适配配置各种AI模型API
 - [ ] 智能体系统重构（多聊天记录支持，Agent 替代 Mode）
+
+#### 管理端
+- [ ] 用户管理
+- [ ] 聊天记录管理
+- [ ] 数据统计
+- [ ] 系统设置
+
+#### 服务端
+- [ ] API 接口开发
+- [ ] 数据库集成
+- [ ] 用户认证
+- [ ] 对话历史存储
+- [ ] 适配配置各种 AI 模型 API
 
 ## 7. 重要提醒
 - **不要帮我写代码**，除非我明确要求
