feat: v0.4 完成 Tailwind CSS + daisyUI 主题化重构
- 集成 Tailwind CSS 4.0 + daisyUI 组件库
- 实现 cupcake/dark 双主题切换（ThemeToggle 组件）
- 重构所有组件：ChatInput、MessageBubble、ChatList、ModeSelector、MarkdownRenderer
- App.tsx 改为 Flex 布局，修复滚动条问题
- 删除所有 CSS Modules 文件，全面使用 Tailwind
- 更新项目文档（README、CLAUDE.md、教学指南）
- 新增 v0.4 教学案例（中英文）

--- a/教学指南/项目规则.md
+++ b/教学指南/项目规则.md
@@ -112,11 +112,16 @@ apps/client/src/components/
         ├── API流式改造案例.md
         └── 集成流式输出案例.md
 └── v0.3/              # v0.3 版本（已完成）
-    ├── v0.3规划.md
-    └── Markdown渲染/
-        ├── 类型定义案例.md
-        ├── MarkdownRenderer组件案例.md
-        └── 集成Markdown渲染.md
+│   ├── v0.3规划.md
+│   └── Markdown渲染/
+│       ├── 类型定义案例.md
+│       ├── MarkdownRenderer组件案例.md
+│       └── 集成Markdown渲染.md
+└── v0.4/              # v0.4 版本（进行中）
+    ├── v0.4规划.md
+    └── daisyUI集成/
+        ├── 安装配置案例.md
+        └── 组件改造案例.md
 ```
 
 ### 版本规划文件格式规范
@@ -220,11 +225,24 @@ apps/client/src/components/
 - ✅ MarkdownRenderer 组件
 - ✅ 集成到 MessageBubble
 
+### v0.4 已完成 ✅
+- ✅ Tailwind CSS + daisyUI 安装配置
+- ✅ cupcake/dark 主题切换
+- ✅ 组件 Tailwind 改造
+  - ✅ ChatInput 组件
+  - ✅ MessageBubble 组件
+  - ✅ ChatList 组件
+  - ✅ ModeSelector 组件
+  - ✅ MarkdownRenderer 组件
+- ✅ App.tsx Flex 布局重构
+- ⏳ 跟随系统主题（待规划 - 需配合多主题选择重构）
+
 ### 待办事项 ⏳
 
 #### 用户端
 - [ ] 消息导出
-- [ ] 深色模式
+- [x] 深色模式（v0.4 基础实现）
+- [ ] 多主题选择（跟随系统主题、自定义主题 - 待规划）
 - [ ] 图片上传
 - [ ] 语音输入
 - [ ] 适配配置各种AI模型API
