docs: v0.5 教学指南 - 后端服务与多模型支持规划
- 新增 v0.5 规划文档（Server + Client 完整实现步骤）
- 新增 11 个案例文档：
  * Server 初始化：Express + TypeScript 项目搭建
  * 数据库配置：Prisma + Supabase 集成
  * 数据库模型：用户、配置、会话、消息 Schema 设计
  * 认证系统：JWT 实现 + Client 登录页面
  * 供应商适配器：统一 AI 接口设计
  * 供应商配置：API Key 加密存储 + Client 配置页面
  * 流式对话：Server-Sent Events 实现
  * 历史会话：会话列表管理
- 更新项目规则：v0.4 标记为完成，v0.5 标记为进行中

--- a/教学指南/项目规则.md
+++ b/教学指南/项目规则.md
@@ -117,11 +117,32 @@ apps/client/src/components/
 │       ├── 类型定义案例.md
 │       ├── MarkdownRenderer组件案例.md
 │       └── 集成Markdown渲染.md
-└── v0.4/              # v0.4 版本（进行中）
-    ├── v0.4规划.md
-    └── daisyUI集成/
-        ├── 安装配置案例.md
-        └── 组件改造案例.md
+└── v0.4/              # v0.4 版本（已完成）
+│   ├── v0.4规划.md
+│   └── daisyUI集成/
+│       ├── 安装配置案例.md
+│       └── 组件改造案例.md
+└── v0.5/              # v0.5 版本（进行中）
+    ├── v0.5规划.md
+    ├── Server项目初始化/
+    │   └── Express项目搭建案例.md
+    ├── 数据库配置/
+    │   └── Prisma配置案例.md
+    ├── 数据库模型/
+    │   └── Schema设计案例.md
+    ├── 认证系统/
+    │   ├── JWT认证案例.md
+    │   └── Client登录页面案例.md
+    ├── 供应商适配器/
+    │   └── 适配器接口案例.md
+    ├── 供应商配置/
+    │   ├── ProviderConfig配置案例.md
+    │   └── Client供应商配置页面案例.md
+    ├── 流式对话API/
+    │   ├── SSE流式API案例.md
+    │   └── Client聊天改造案例.md
+    └── 历史会话管理/
+        └── 会话列表组件案例.md
 ```
 
 ### 版本规划文件格式规范
@@ -235,7 +256,23 @@ apps/client/src/components/
   - ✅ ModeSelector 组件
   - ✅ MarkdownRenderer 组件
 - ✅ App.tsx Flex 布局重构
-- ⏳ 跟随系统主题（待规划 - 需配合多主题选择重构）
+
+### v0.5 进行中 ⏳
+- ⏳ Server 基础搭建
+  - ⏳ Express + TypeScript 项目初始化
+  - ⏳ Prisma + Supabase 配置
+  - ⏳ 数据库模型设计
+- ⏳ 认证系统
+  - ⏳ JWT 认证 API
+  - ⏳ Client 登录/注册页面
+- ⏳ AI 供应商管理
+  - ⏳ 适配器接口设计
+  - ⏳ 供应商配置 API
+  - ⏳ Client 配置页面
+- ⏳ 聊天功能迁移
+  - ⏳ Server 端 SSE 流式 API
+  - ⏳ Client 调用 Server API
+  - ⏳ 历史会话管理
 
 ### 待办事项 ⏳
 
@@ -254,10 +291,10 @@ apps/client/src/components/
 - [ ] 数据统计
 - [ ] 系统设置
 
-#### 服务端
+#### 服务端 (v0.5 进行中)
 - [ ] API 接口开发
-- [ ] 数据库集成
-- [ ] 用户认证
+- [ ] 数据库集成 (Supabase + Prisma)
+- [ ] 用户认证 (JWT)
 - [ ] 对话历史存储
 - [ ] 适配配置各种 AI 模型 API
 
