docs: 添加技术选型规划规则
- 新增技术调研要求（官网优先、Monorepo 兼容性验证、案例可运行性）
- 初始化 apps/server 目录结构

--- a/教学指南/项目规则.md
+++ b/教学指南/项目规则.md
@@ -334,3 +334,26 @@ apps/client/src/components/
    - 学生按顺序阅读案例
    - 根据案例自己实现
    - 完成后告诉老师检查
+
+## 9. 技术选型与规划规则
+
+### 新版本规划时的技术调研要求
+
+在规划新版本或引入新技术/中间件时，**必须先进行充分调研**，避免案例与实际使用脱节：
+
+1. **官网优先原则**
+   - 必须先去技术/中间件的**官方网站**查看最新文档
+   - 重点关注版本变更日志（Changelog）和迁移指南
+   - 确认当前最新版本的使用方法，而非依赖过往经验
+
+2. **Monorepo 兼容性验证**
+   - 必须验证该技术在 **pnpm workspace** 环境下的兼容性
+   - 特别注意依赖提升（hoisting）可能导致的模块解析问题
+   - 如涉及代码生成（如 Prisma），需明确生成路径和导入方式
+
+3. **案例可运行性**
+   - 案例文档中的代码必须经过实际验证，确保可正常运行
+   - 明确记录任何特殊的配置要求或变通方案
+   - 如遇兼容性问题，需在案例中明确说明解决方案
+
+**目的**：确保教学案例与实际项目环境一致，避免因版本差异或 Monorepo 特性导致学生无法复现。
