feat: v0.5 认证系统实现
Server:
- Express + TypeScript 项目初始化
- Supabase 数据库集成与类型定义
- JWT 认证系统（注册/登录/中间件）
- bcrypt 密码加密
- Monorepo 环境配置（基于文件位置的 dotenv 加载）

API 端点:
- POST /auth/register - 用户注册
- POST /auth/login - 用户登录
- GET /protected - 受保护路由示例（需认证）

文档:
- 更新 README.md 和 README_EN.md 进度
- 更新 项目规则.md v0.5 状态

--- a/项目规则.md
+++ b/项目规则.md
@@ -140,12 +140,12 @@ apps/client/src/components/
 - ✅ App.tsx Flex 布局重构
 
 ### v0.5 进行中 ⏳
-- ⏳ Server 基础搭建
-  - ⏳ Express + TypeScript 项目初始化
-  - ⏳ Prisma + Supabase 配置
-  - ⏳ 数据库模型设计
-- ⏳ 认证系统
-  - ⏳ JWT 认证 API
+- ✅ Server 基础搭建
+  - ✅ Express + TypeScript 项目初始化
+  - ✅ Supabase 配置
+  - ✅ 数据库模型设计
+- ✅ 认证系统
+  - ✅ JWT 认证 API（注册/登录/中间件）
   - ⏳ Client 登录/注册页面
 - ⏳ AI 供应商管理
   - ⏳ 适配器接口设计
